Fixed Jump and collision

--- a/CoonRun/docs/css/main.css
+++ b/CoonRun/docs/css/main.css
@@ -1,7 +1,6 @@
 #cnvs {
     padding-left: 0;
     padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     display: block;
 }
